--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </div>
         </div>
         <div class="slide">
-          <img src="/image/one punch man.jpg" />
+          <img src="interactive-development-asg-1/image/one punch man.jpg" />
           <div class="image-overlay">
             <h1 class="title">One Punch Man</h1>
             <p class="description">Death to Wallpaper</p>
