--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <input type="radio" name="radio-btn" id="radio3" />
         <input type="radio" name="radio-btn" id="radio4" />
         <div class="naruto slide first">
-          <img src="https://thianping-ng.github.io/interactive-development-asg-1/image/naruto_vs_sasuke.webp" />
+          <img src="naruto_vs_sasuke.webp" alt="image"/>
           <div class="image-overlay">
             <h1 class="title">Naruto</h1>
             <p class="description">Shidori your Wallpaper</p>
