--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         <input type="radio" name="radio-btn" id="radio3" />
         <input type="radio" name="radio-btn" id="radio4" />
         <div class="naruto slide first">
-          <img src="naruto_vs_sasuke.webp" alt="image"/>
+          <img src="/interactive-development-asg-1/image/naruto_vs_sasuke.webp"/>
           <div class="image-overlay">
             <h1 class="title">Naruto</h1>
             <p class="description">Shidori your Wallpaper</p>
           </div>
         </div>
         <div class="slide">
-          <img src="interactive-development-asg-1/image/one punch man.jpg" />
+          <img src="/interactive-development-asg-1/image/one punch man.jpg" />
           <div class="image-overlay">
             <h1 class="title">One Punch Man</h1>
             <p class="description">Death to Wallpaper</p>
