--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </label>
         <label class="logo-name">Aniyo</label>
         <ul>
-          <li><a href="about.html">About Aniyo</a></li>
+          <li><a href="interactive development asg 1_S10247447_Ng Thian Ping/about.html">About Aniyo</a></li>
           <li><a href="">Contact</a></li>
           <li><a class="active_sign-in" href="">Sign in</a></li>
           <li><a class="active_sign-up" href="">Sign up</a></li>
@@ -52,7 +52,7 @@
         </div>
 
         <div class="slide">
-          <img src="/image/fairy tail.jpg" />
+          <img src="image/fairy tail.jpg" />
           <div class="image-overlay">
             <h1 class="title">Fairy Tail</h1>
             <p class="description">Will always watch over your Wallpaper</p>
@@ -60,7 +60,7 @@
         </div>
 
         <div class="slide">
-          <img src="/image/d gray man.jpg" />
+          <img src="image/d gray man.jpg" />
           <div class="image-overlay">
             <h1 class="title">D Gray Man</h1>
             <p class="description">
@@ -87,46 +87,46 @@
     </div>
 
     <div class="selection-background">
-      <img class="anime" src="/image/mecha.jpg" />
+      <img class="anime" src="image/mecha.jpg" />
       <div class="anime-overlay">
         <h1>mecha</h1>
       </div>
-      <img class="anime" src="/image/sasuke.jpg" />
+      <img class="anime" src="image/sasuke.jpg" />
       <div class="anime-overlay">
         <h1>shonen</h1>
       </div>
 
-      <img class="anime" src="/image/villian.jpg" />
+      <img class="anime" src="image/villian.jpg" />
 
       <div class="anime-overlay">
         <h1 class="anime-title">adventure</h1>
       </div>
 
-      <img class="anime" src="/image/horror.jpg" />
+      <img class="anime" src="image/horror.jpg" />
 
       <div class="anime-overlay">
         <h1 class="anime-title">horror</h1>
       </div>
 
-      <img class="anime" src="/image/asta.jpg" />
+      <img class="anime" src="image/asta.jpg" />
 
       <div class="anime-overlay">
         <h1 class="anime-title">demon</h1>
       </div>
 
-      <img class="anime" src="/image/romance.jpg" />
+      <img class="anime" src="image/romance.jpg" />
 
       <div class="anime-overlay">
         <h1 class="anime-title">romance</h1>
       </div>
 
-      <img class="anime" src="/image/spy family.jpg" />
+      <img class="anime" src="image/spy family.jpg" />
 
       <div class="anime-overlay">
         <h1 class="anime-title">spy x family</h1>
       </div>
 
-      <img class="anime" src="/image/war.jpeg" />
+      <img class="anime" src="image/war.jpeg" />
 
       <div class="anime-overlay">
         <h1 class="anime-title">violence</h1>
