--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aniyo anime wallpaper</title>
-    <link rel="stylesheet" href="home_page.css" />
+    <link rel="stylesheet" href="CSS/home_page.css" />
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
@@ -22,7 +22,7 @@
         </label>
         <label class="logo-name">Aniyo</label>
         <ul>
-          <li><a href="interactive development asg 1_S10247447_Ng Thian Ping/about.html">About Aniyo</a></li>
+          <li><a href="HTML/about.html">About Aniyo</a></li>
           <li><a href="">Contact</a></li>
           <li><a class="active_sign-in" href="">Sign in</a></li>
           <li><a class="active_sign-up" href="">Sign up</a></li>
