--- a/HTML/about.html
+++ b/HTML/about.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <section class="background">
-      <img src="background-blue.jpg" />
+      <img src="image/background-blue.jpg" />
       <h1 class="label">About Aniyo</h1>
       <p class="about-aniyo">
         Aniyo is a site that brings popular anime wallpapers to users, as anime
