--- a/HTML/about.html
+++ b/HTML/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Aniyo</title>
-    <link rel="stylesheet" href="CSS/about.css" />
+    <link rel="stylesheet" href="interactive development asg 1_S10247447_Ng Thian Ping/about.css" />
   </head>
   <body>
     <section class="background">
