--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </label>
         <label class="logo-name">Aniyo</label>
         <ul>
-          <li><a href="HTML/about.html">About Aniyo</a></li>
+          <li><a href="about.html">About Aniyo</a></li>
           <li><a href="">Contact</a></li>
           <li><a class="active_sign-in" href="">Sign in</a></li>
           <li><a class="active_sign-up" href="">Sign up</a></li>
@@ -33,14 +33,14 @@
         <input type="radio" name="radio-btn" id="radio3" />
         <input type="radio" name="radio-btn" id="radio4" />
         <div class="naruto slide first">
-          <img src="/image/naruto_vs_sasuke.webp" />
+          <img src="image/naruto_vs_sasuke.webp" />
           <div class="image-overlay">
             <h1 class="title">Naruto</h1>
             <p class="description">Shidori your Wallpaper</p>
           </div>
         </div>
         <div class="slide">
-          <img src="/image/one punch man.jpg" />
+          <img src="image/one punch man.jpg" />
           <div class="image-overlay">
             <h1 class="title">One Punch Man</h1>
             <p class="description">Death to Wallpaper</p>
@@ -48,7 +48,7 @@
         </div>
 
         <div class="slide">
-          <img src="/image/fairy tail.jpg" />
+          <img src="image/fairy tail.jpg" />
           <div class="image-overlay">
             <h1 class="title">Fairy Tail</h1>
             <p class="description">Will always watch over your Wallpaper</p>
@@ -56,7 +56,7 @@
         </div>
 
         <div class="slide">
-          <img src="/image/d gray man.jpg" />
+          <img src="image/d gray man.jpg" />
           <div class="image-overlay">
             <h1 class="title">D Gray Man</h1>
             <p class="description">
@@ -87,42 +87,42 @@
       <div class="anime-overlay">
         <h1>mecha</h1>
       </div>
-      <img class="anime" src="/image/sasuke.jpg" />
+      <img class="anime" src="image/sasuke.jpg" />
       <div class="anime-overlay">
         <h1>shonen</h1>
       </div>
 
-      <img class="anime" src="/image/villian.jpg" />
+      <img class="anime" src="image/villian.jpg" />
 
       <div class="anime-overlay">
         <h1 class="anime-title">adventure</h1>
       </div>
 
-      <img class="anime" src="/image/horror.jpg" />
+      <img class="anime" src="image/horror.jpg" />
 
       <div class="anime-overlay">
         <h1 class="anime-title">horror</h1>
       </div>
 
-      <img class="anime" src="/image/asta.jpg" />
+      <img class="anime" src="image/asta.jpg" />
 
       <div class="anime-overlay">
         <h1 class="anime-title">demon</h1>
       </div>
 
-      <img class="anime" src="/image/romance.jpg" />
+      <img class="anime" src="image/romance.jpg" />
 
       <div class="anime-overlay">
         <h1 class="anime-title">romance</h1>
       </div>
 
-      <img class="anime" src="/image/spy family.jpg" />
+      <img class="anime" src="image/spy family.jpg" />
 
       <div class="anime-overlay">
         <h1 class="anime-title">spy x family</h1>
       </div>
 
-      <img class="anime" src="/image/war.jpeg" />
+      <img class="anime" src="image/war.jpeg" />
 
       <div class="anime-overlay">
         <h1 class="anime-title">violence</h1>
