--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Aniyo</title>
-    <link rel="stylesheet" href="CSS//about.css" />
+    <link rel="stylesheet" href="CSS/about.css"/>
   </head>
   <body>
     <section class="background">
@@ -25,7 +25,7 @@
         that portray resilience when they are faced with challenges.
       </p>
       <div class="home-button">
-        <a a href="/homepage.html">Home</a>
+        <a a href="/index.html">Home</a>
       </div>
     </section>
   </body>
