--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
 
     <div class="selection-background">
-      <img class="anime" src="/image/mecha.jpg" />
+      <img class="anime" src="image/mecha.jpg" />
       <div class="anime-overlay">
         <h1>mecha</h1>
       </div>
