--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         that portray resilience when they are faced with challenges.
       </p>
       <div class="home-button">
-        <a href="/index.html">Home</a>
+        <a href="index.html">Home</a>
       </div>
     </section>
   </body>
