--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <input type="radio" name="radio-btn" id="radio4" />
         <!--button that allows user to interact the sliding image-->
         <div class="naruto slide first">
-          <img src="image/naruto_vs_sasuke.webp" />
+          <img src="asset/image/naruto_vs_sasuke.webp" />
           <div class="image-overlay">
             <h1 class="title">Naruto</h1>
             <p class="description">Shidori your Wallpaper</p>
