--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </div>
         </div>
         <div class="slide">
-          <img src="image/one punch man.jpg" />
+          <img src="asset/image/one punch man.jpg" />
           <div class="image-overlay">
             <h1 class="title">One Punch Man</h1>
             <p class="description">Death to Wallpaper</p>
@@ -59,7 +59,7 @@
         </div>
 
         <div class="slide">
-          <img src="image/fairy tail.jpg" />
+          <img src="asset/image/fairy tail.jpg" />
           <div class="image-overlay">
             <h1 class="title">Fairy Tail</h1>
             <p class="description">Will always watch over your Wallpaper</p>
@@ -67,7 +67,7 @@
         </div>
 
         <div class="slide">
-          <img src="image/d gray man.jpg" />
+          <img src="asset/image/d gray man.jpg" />
           <div class="image-overlay">
             <h1 class="title">D Gray Man</h1>
             <p class="description">
@@ -99,7 +99,7 @@
     <div id="overlay">
       <h1 id="genre">Genre Selection to download</h1>
       <div class="selection-background">
-        <img class="anime" src="image/mecha.jpg" />
+        <img class="anime" src="asset/image/mecha.jpg" />
         <div class="anime-overlay">
           <div id="anime-header">
             <a href="HTML/Genre_mecha.html">
@@ -107,7 +107,7 @@
             </a>
           </div>
         </div>
-        <img class="anime" src="image/drama genre selection.webp" />
+        <img class="anime" src="asset/image/drama genre selection.webp" />
         <div class="anime-overlay">
           <div id="anime-header">
             <a href="HTML/Genre_drama.html">
@@ -116,7 +116,7 @@
           </div>
         </div>
 
-        <img class="anime" src="image/villian.jpg" />
+        <img class="anime" src="asset/image/villian.jpg" />
 
         <div class="anime-overlay">
           <div id="anime-header">
@@ -126,7 +126,7 @@
           </div>
         </div>
 
-        <img class="anime" src="image/horror.jpg" />
+        <img class="anime" src="asset/image/horror.jpg" />
 
         <div class="anime-overlay">
           <div id="anime-header">
@@ -136,7 +136,7 @@
           </div>
         </div>
 
-        <img class="anime" src="image/asta.jpg" />
+        <img class="anime" src="asset/image/asta.jpg" />
 
         <div class="anime-overlay">
           <div id="anime-header">
@@ -146,7 +146,7 @@
           </div>
         </div>
 
-        <img class="anime" src="image/romance.jpg" />
+        <img class="anime" src="asset/image/romance.jpg" />
 
         <div class="anime-overlay">
           <div id="anime-header">
@@ -156,7 +156,7 @@
           </div>
         </div>
 
-        <img class="anime" src="image/slice of life genre selection.jpg" />
+        <img class="anime" src="asset/image/slice of life genre selection.jpg" />
 
         <div class="anime-overlay">
           <div id="anime-header">
@@ -166,7 +166,7 @@
           </div>
         </div>
 
-        <img class="anime" src="image/war.jpeg" />
+        <img class="anime" src="asset/image/war.jpeg" />
 
         <div class="anime-overlay">
           <div id="anime-header">
