--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
       <div class="sign-up box">
         <h1 class="header">Contact</h1>
         <!--form page however no javascript is implemented-->
-        <form id="form" action="/" method="GET">
+        <form id="form">
           <div class="form-control">
             <label for="first-name">First Name</label>
             <input type="text" placeholder="First Name" id="first-name" />
@@ -43,6 +43,6 @@
         </form>
       </div>
     </div>
-    <script src="/HTML/javascript/contact.js"></script>
+    <script src="asset/javascript/contact.js"></script>
   </body>
 </html>
