--- a/login.html
+++ b/login.html
@@ -47,6 +47,6 @@
         </form>
       </div>
     </div>
-    <script src="/HTML/javascript/login.js"></script>
+    <script src="asset/javascript/login.js"></script>
   </body>
 </html>
