--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <img class="anime" src="asset/image/mecha.jpg" />
         <div class="anime-overlay">
           <div id="anime-header">
-            <a href="HTML/Genre_mecha.html">
+            <a href="asset/HTML/Genre_mecha.html">
               <h1>Mecha</h1>
             </a>
           </div>
@@ -110,7 +110,7 @@
         <img class="anime" src="asset/image/drama genre selection.webp" />
         <div class="anime-overlay">
           <div id="anime-header">
-            <a href="HTML/Genre_drama.html">
+            <a href="asset/HTML/Genre_drama.html">
               <h1>Drama</h1>
             </a>
           </div>
@@ -120,7 +120,7 @@
 
         <div class="anime-overlay">
           <div id="anime-header">
-            <a href="HTML/genre_action.html">
+            <a href="asset/HTML/genre_action.html">
               <h1>Action</h1>
             </a>
           </div>
@@ -130,7 +130,7 @@
 
         <div class="anime-overlay">
           <div id="anime-header">
-            <a href="HTML/Genre_Psychological.html">
+            <a href="asset/HTML/Genre_Psychological.html">
               <h1>Psycological</h1>
             </a>
           </div>
@@ -140,7 +140,7 @@
 
         <div class="anime-overlay">
           <div id="anime-header">
-            <a href="HTML/Genre_magic.html">
+            <a href="asset/HTML/Genre_magic.html">
               <h1>Magic</h1>
             </a>
           </div>
@@ -150,7 +150,7 @@
 
         <div class="anime-overlay">
           <div id="anime-header">
-            <a href="HTML/Genre_romance.html">
+            <a href="asset/HTML/Genre_romance.html">
               <h1>Romance</h1>
             </a>
           </div>
@@ -160,7 +160,7 @@
 
         <div class="anime-overlay">
           <div id="anime-header">
-            <a href="HTML/Genre_slice of life.html">
+            <a href="asset/HTML/Genre_slice of life.html">
               <h1>Slice of life</h1>
             </a>
           </div>
@@ -170,7 +170,7 @@
 
         <div class="anime-overlay">
           <div id="anime-header">
-            <a href="HTML/Genre_violence.html">
+            <a href="asset/HTML/Genre_violence.html">
               <h1>violence</h1>
             </a>
           </div>
