--- a/asset/HTML/Genre_mecha.html
+++ b/asset/HTML/Genre_mecha.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Genre Mecha</title>
-    <link rel="stylesheet" href="CSS/Genre_mecha.css" />
+    <link rel="stylesheet" href="asset/CSS/Genre_mecha.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -34,31 +34,31 @@
       </nav>
     </section>
     <div class="background-image">
-      <img class="anime-img" src="image/mecha-hero-banner.jpg" />
+      <img class="anime-img" src="asset/image/mecha-hero-banner.jpg" />
       <div class="overlay">
-        <a href="image/mecha1.jpg" id="download" download>
-          <img class="action" src="image/mecha1.jpg" />
+        <a href="asset/image/mecha1.jpg" id="download" download>
+          <img class="action" src="asset/image/mecha1.jpg" />
         </a>
-        <a href="image/mecha2.jpg" id="download" download>
-          <img class="action" src="image/mecha2.jpg" />
+        <a href="asset/image/mecha2.jpg" id="download" download>
+          <img class="action" src="asset/image/mecha2.jpg" />
         </a>
-        <a href="image/mecha3.jpg" id="download" download>
-          <img class="action" src="image/mecha3.jpg" />
+        <a href="asset/image/mecha3.jpg" id="download" download>
+          <img class="action" src="asset/image/mecha3.jpg" />
         </a>
-        <a href="image/mecha4.jpg" id="download" download>
-          <img class="action" src="image/mecha4.jpg" />
+        <a href="asset/image/mecha4.jpg" id="download" download>
+          <img class="action" src="asset/image/mecha4.jpg" />
         </a>
-        <a href="image/mecha5.jpg" id="download" download>
-          <img class="action" src="image/mecha5.jpg" />
+        <a href="asset/image/mecha5.jpg" id="download" download>
+          <img class="action" src="asset/image/mecha5.jpg" />
         </a>
-        <a href="image/mecha6.jpg" id="download" download>
-          <img class="action" src="image/mecha6.jpg" />
+        <a href="asset/image/mecha6.jpg" id="download" download>
+          <img class="action" src="asset/image/mecha6.jpg" />
         </a>
-        <a href="image/mecha7.jpg" id="download" download>
-          <img class="action" src="image/mecha7.jpg" />
+        <a href="asset/image/mecha7.jpg" id="download" download>
+          <img class="action" src="asset/image/mecha7.jpg" />
         </a>
-        <a href="image/mecha8.jpg" id="download" download>
-          <img class="action" src="image/mecha8.jpg" />
+        <a href="asset/image/mecha8.jpg" id="download" download>
+          <img class="action" src="asset/image/mecha8.jpg" />
         </a>
       </div>
     </div>
