--- a/about.html
+++ b/about.html
@@ -34,6 +34,6 @@
       resilience when they are faced with challenges.
     </p>
     <h1 class="label">About Aniyo</h1>
-    <img src="HTML/image/one piece.jpg" />
+    <img src="asset/HTML/image/one piece.jpg" />
   </body>
 </html>
