--- a/asset/HTML/signup.html
+++ b/asset/HTML/signup.html
@@ -56,6 +56,6 @@
         </form>
       </div>
     </div>
-    <script src="/HTML/javascript/signup.js"></script>
+    <script src="signup.js"></script>
   </body>
 </html>
