--- a/asset/HTML/login.html
+++ b/asset/HTML/login.html
@@ -47,6 +47,6 @@
         </form>
       </div>
     </div>
-    <script src="javascript/login.js"></script>
+    <script src="login.js"></script>
   </body>
 </html>
