--- a/asset/HTML/contact.html
+++ b/asset/HTML/contact.html
@@ -43,6 +43,6 @@
         </form>
       </div>
     </div>
-    <script src="/HTML/javascript/contact.js"></script>
+    <script src="contact.js"></script>
   </body>
 </html>
