--- a/asset/HTML/Genre_Psychological.html
+++ b/asset/HTML/Genre_Psychological.html
@@ -27,9 +27,9 @@
         </a>
         <ul>
           <li><a href="/about.html">About Aniyo</a></li>
-          <li><a href="">Contact</a></li>
-          <li><a href="">Sign in</a></li>
-          <li><a href="">Sign up</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="login.html">Log in</a></li>
+          <li><a href="signup.hml">Sign up</a></li>
         </ul>
       </nav>
     </section>
