--- a/asset/HTML/Genre_drama.html
+++ b/asset/HTML/Genre_drama.html
@@ -26,7 +26,7 @@
           <label class="logo-name">Aniyo</label>
         </a>
         <ul>
-          <li><a href="/about.html">About Aniyo</a></li>
+          <li><a href="about.html">About Aniyo</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="login.html">Log in</a></li>
           <li><a href="signup.html">Sign up</a></li>
