--- a/asset/HTML/Genre_mecha.html
+++ b/asset/HTML/Genre_mecha.html
@@ -22,7 +22,7 @@
             <ion-icon name="menu-outline"></ion-icon>
           </span>
         </label>
-        <a href="/index.html" id="logo">
+        <a href="/" id="logo">
           <label class="logo-name">Aniyo</label>
         </a>
         <ul>
