--- a/asset/HTML/about.html
+++ b/asset/HTML/about.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="logo">
-      <a href="index.html">
+      <a href="/">
         <h1 class="header">Aniyo</h1>
       </a>
     </div>
@@ -34,6 +34,6 @@
       resilience when they are faced with challenges.
     </p>
     <h1 class="label">About Aniyo</h1>
-    <img src="HTML/image/one piece.jpg" />
+    <img src="one piece.jpg" />
   </body>
 </html>
