--- a/asset/HTML/login.html
+++ b/asset/HTML/login.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div id="home">
-      <a href="index.html">Aniyo</a>
+      <a href="/">Aniyo</a>
     </div>
     <div class="overlay">
       <div class="sign-up box">
