--- a/asset/HTML/contact.html
+++ b/asset/HTML/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="contact.css" />
   </head>
   <body>
-    <a href="index.html"><h1>Aniyo</h1></a>
+    <a href="/"><h1>Aniyo</h1></a>
     <div class="overlay">
       <div class="sign-up box">
         <h1 class="header">Contact</h1>
