--- a/asset/HTML/signup.html
+++ b/asset/HTML/signup.html
@@ -15,7 +15,7 @@
     <title>Sign Up</title>
   </head>
   <body>
-    <a href="index.html"><h1>Aniyo</h1></a>
+    <a href="/"><h1>Aniyo</h1></a>
     <div class="overlay">
       <div class="sign-up box">
         <h1 class="header">Sign Up</h1>
