--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <input type="radio" name="radio-btn" id="radio4" />
         <!--button that allows user to interact the sliding image-->
         <div class="naruto slide first">
-          <img src="asset/image/naruto_vs_sasuke.webp" />
+          <img src="asset/HTML/image/naruto_vs_sasuke.webp" />
           <div class="image-overlay">
             <h1 class="title">Naruto</h1>
             <p class="description">Shidori your Wallpaper</p>
@@ -99,7 +99,7 @@
     <div id="overlay">
       <h1 id="genre">Genre Selection to download</h1>
       <div class="selection-background">
-        <img class="anime" src="asset/image/mecha.jpg" />
+        <img class="anime" src="asset/HTML/image/mecha.jpg" />
         <div class="anime-overlay">
           <div id="anime-header">
             <a href="asset/HTML/Genre_mecha.html">
